# wherefrom

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: c  run-all-checks.sh  run-linter.sh  run-tests.sh  run-type-checker.sh
source/wherefrom/: __init__.py  error.py  errors.py  exceptions.py  parse.py  read.py  readexceptions.py  run.py  tools.py  walk.py
source/wherefrom/exceptions/: __init__.py  base.py  file.py  parse.py  read.py  registry.py
tests/: __init__.py  conftest.py  environment.py  environment_tests.py  error_tests.py  errors_tests.py  exceptions_tests.py  hello_tests.py  parse_tests.py  read_error_tests.py  read_tests.py  run_tests.py  tools.py  tools_tests.py  walk_tests.py
tests/exceptions_tests/: __init__.py  base_tests.py  registry_tests.py
tests/read/: __init__.py  happy_tests.py  unhappy_getxattr_tests.py  unhappy_value_tests.py
tests/tools/: __init__.py  miscellaneous.py
tests/tools/environment/: __init__.py  items.py  structure.py  tests.py
